# xenopsd-ng

./: README.md
rust/: Cargo.toml  README.md  build.rs
rust/cli/: README.md  main.rs
rust/daemon/: Cargo.toml  README.md  main.rs
rust/lib/: bindings.rs  domain_config.rs  lib.rs  vm.rs  wrapper.h  xenctrl.rs  xenstore.rs
rust/src/: main.rs  xenctrl.rs  xenstore.rs
rust/wrapper/: gen-hvm-save-variables.c  wrapper.h
