[package]
name = "xenops"
version = "0.1.0"
authors = ["BenjiReis <benjamin.reis@vates.fr>", "Ronan Abhamon <ronan.abhamon@vates.fr>"]
edition = "2018"
description = "Rust implementation of xenops"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["xen", "xenopsd"]
build = "build.rs"

[dependencies]
libc = "0.2.80"
rust-ini = "0.16.0"
serde = { version = "1.0" }
uuid = "0.6.5"

[build-dependencies]
# We can't use a more recent version without having libclang 3.9 installed.
bindgen = "0.54.0"

[lib]
path = "lib/lib.rs"

[[bin]]
name = "xenops-cli"
path = "cli/main.rs"

[workspace]
members = ["daemon"]
