[package]
name = "xenopsd"
version = "0.1.0"
authors = ["BenjiReis <benjamin.reis@vates.fr>", "Ronan Abhamon <ronan.abhamon@vates.fr>"]
edition = "2018"
description = "Xenops daemon"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["xen", "xenopsd"]

[dependencies]
enclose = "1.1.8"
jsonrpc-core = "15.1.0"
jsonrpc-http-server = "15.1.0"
serde = { version = "1.0", features = ["derive"] }
xenops = { path = "../" }

[[bin]]
name = "xenopsd"
path = "main.rs"
